--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,8 @@
         "phpunit/phpunit": "4.8.*",
         "behat/behat": "3.0.*",
         "behat/mink-extension": "2.0.*"
+    },
+    "autoload": {
+        "psr-4": {"Calculator\\": "src/Calculator"}
     }
 }
