- Sets up a simple routing handler for CalculatorApp; - Includes support for view templates (Twig); - Adds some views for Calculator; - Includes support for UI tests using Behat's Mink extension; - Implements first UI scenario; - FIxes broken unit test;

--- a/behat.yml
+++ b/behat.yml
@@ -1,18 +1,27 @@
 default:
     autoload:
-        '': %paths.base%/tests/integration/features/bootstrap
+        '': %paths.base%/tests/behavior/features/bootstrap
+    extensions:
+        Behat\MinkExtension:
+            base_url:  'http://poc-automated-tests.dev'
+            browser_name: firefox
+            sessions:
+                default:
+                    goutte: ~
+                javascript:
+                    selenium2: ~
     suites:
         domain:
-            paths:
-                - %paths.base%/tests/integration/features
             contexts: [DomainModelContext]
             filters:
                 tags:
                     @domain
-        ui:
             paths:
-                - %paths.base%/tests/integration/features
+                - %paths.base%/tests/behavior/features
+        ui:
             contexts: [UIContext]
             filters:
                 tags:
                     @ui
+            paths:
+                - %paths.base%/tests/behavior/features
